fixed "scroll overflow"

--- a/tailor-app/frontend/src/App.css
+++ b/tailor-app/frontend/src/App.css
@@ -10,7 +10,8 @@
 
 #root {
   margin: auto;
-  padding: 2rem;
+  padding-right: 2rem;
+  padding-left: 2rem;
   text-align: center;
   display: flex;
   flex-direction: column;
